--- a/index.html
+++ b/index.html
@@ -7,6 +7,110 @@
     <link rel="stylesheet" href="/static/style.css">
 
     <style>
+        *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(44, 44, 44, 0.664);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    letter-spacing: 1px;
+    font-size: 16px;
+    
+}
+ /*-------------------------header style-------------------------*/
+
+header{
+    height: 4rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+h2{
+    color:rgb(66, 66, 66);
+}
+header span{
+    font-family: cursive;
+    color: rgb(118, 61, 172);
+    font-size: 18px;
+}
+.headbox{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(214, 148, 214);
+}
+#box2{
+    background-color: rgb(248, 172, 248);
+}
+/*-------------------------main style-------------------------*/
+main{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 60%;
+    padding: 20px;
+}
+.select-box1{
+    margin-bottom: 20px;
+    color: rgb(252, 252, 252);
+    font-weight: 500;
+    font-size: 18px;
+}
+form{
+    border: 2px solid  rgb(214, 148, 214);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+    border-radius: 5px;  
+  position: relative;
+}
+
+.btn
+{
+    padding: 10px;
+    height: 30px;
+    border-radius: 5px;
+    border:none;
+    color:rgb(66, 66, 66);
+    background-color: rgb(109, 237, 247);
+    align-self: center;
+    cursor: pointer;
+}
+/*-------------------------Footer style-------------------------*/
+footer{
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    font-size: 12px;
+    width: 100%;
+    background-color: rgb(214, 148, 214);
+    color:rgb(66, 66, 66);
+}
+    
+
+/*-------------------------Phone style-------------------------*/
+@media (max-width:600px) {
+    header{
+        height: 8rem;
+        flex-direction: column;
+    }
+    .headbox{
+        width: 100%;
+        height: 50%;}
+}
         .showerror{
             background-color: rgba(248, 153, 64, 0.801);
             padding: 5px;
